<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/mainImg"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:layout_marginTop="-15dp"
        android:contentDescription="@string/description"
        android:scaleType="centerCrop"
        android:src="@drawable/main_img" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:contentDescription="@string/description"
        android:src="@mipmap/ic_launcher_round" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mainImg"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="365dp"
        android:background="@drawable/lin_layout_bg"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/description"
                    android:src="@drawable/email" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="4dp"
                    android:focusedByDefault="false"
                    android:hint="@string/email"
                    android:importantForAutofill="no"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/lightWhite"
                    android:textSize="20sp"
                    tools:targetApi="o" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:contentDescription="@string/description"
                    android:src="@drawable/password" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="4dp"
                    android:focusedByDefault="false"
                    android:hint="@string/password"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColor="@color/colorAccent"
                    android:textColorHint="@color/lightWhite"
                    android:textSize="20sp"
                    tools:targetApi="o" />

                <ImageButton
                    android:id="@+id/eye"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="-10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/description"
                    android:src="@drawable/eye" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn2bg"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btn_signup"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/btn1bg"
                android:text="@string/sign_up"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>